WIP: fixing tests